--- a/index.html
+++ b/index.html
@@ -4,9 +4,141 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="/css/output.css" rel="stylesheet">
+    <link href="/css/homeStyle.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline text-red-500">Hello world</h1>
+    <div class="bg-[#191E29] h-[120vh] text-white" >
+        <nav  class="flex items-center justify-between  py-[40px] px-[300px]">
+            <div>
+                <img src="" alt="">
+                <a href=""><h1 class="text-[40px] font-bold cursor-pointer">SwissBorg</h1></a>
+            </div>
+
+            <div class="flex items-center gap-[50px]">
+                <a class="text-[15px] cursor-pointer" href="">Invest</a>
+                <a class="text-[15px] cursor-pointer" href="">About Us</a>
+            </div>
+            <div>
+               <h1 class="text-[20px] cursor-pointer"> <span class="text-[20px]"><i class="bi bi-globe"></i></span> EN</h1>
+            </div>
+
+            
+        </nav>
+
+        <div>
+            <div class="bg-[#2B88E7] absolute p-76 top-150 left-200 rounded-full blur-[70px]">
+
+            </div>
+            <div class="bg-[#08A989] absolute p-56 top-70 left-100 rounded-full blur-[70px]">
+
+            </div>
+            <div class="flex items-center justify-between gap-[100px] px-[300px] my-[60px]">
+                <div class="w-[35rem] h-[45rem]">
+                    <img class="w-[100%] h-[85%]" src="/Image/hero-img.png" alt="Front-View">
+
+                </div>
+                <div class=" ">
+                    <h1 class=" font-extrabold text-[50px] pr-[120px]">Empowering Your Financial Freedom</h1>
+
+                    <h3 class="text-[20px] pr-[50px]">Buy, sell and exchange cryptocurrencies with 16 fiats including EUR, CHF and GBP.</h3>
+
+                    <button class="px-10 py-2 rounded-md bg-[#01C38D] focus:outline-none mt-[30px]">Get Started</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="items-center text-center flex-col px-[250px]">
+            <h1 class="text-[50px] font-bold">Licensed and regulated</h1>
+            <div class="flex items-center justify-between gap-[10px] mt-[40px] px-[250px]">
+                <img src="/Image/AMF.png" alt="AMF">
+                <img src="./Image/FIU.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="flex  my-[80px] hello mx-auto gap-[40px] w-[65%]  h-[350px] rounded-tl-[100px] rounded-br-[100px] px-[10px] py-[30px]" >
+
+        <div class="w-[30%] h-auto py-[150px] ">
+            <img class="w-[100%] h-auto py-[50px]"  src="/Image/pinksect.png" alt="">
+        </div>
+
+        <div class="text-white">
+            <h1 class="font-bold text-5xl ">Invest in what millions will play.</h1>
+            <h3 class="text-3xl font-semibold ">Level-up your portfolio with the most promising trend in crypto.</h3>
+            <button class="px-10 cursor-pointer py-[14px] rounded-[20px] text-[#01C38D] text- font-semibold bg-white focus:outline-none mt-[30px]">Get Started</button>
+        </div>
+
+    </div>
+
+    <div class="my-[80px] text-center ">
+        <h1 class="text-[40px] text-center mx-auto w-[50%] font-bold ">SwissBorg is Europe’s leading trusted, secure and reliable crypto app</h1>
+
+        <div class="flex items-center justify-between mx-auto my-[50px] w-[60%]">
+
+            <div class="flex items-center flex-col gap-[35px]">
+                <img class="w-[90px]" src="/Image/SEO-page-Cryptos.svg" alt="">
+                <div class="font-bold text-[25px]">
+                    <h3>Your funds are safe</h3>
+                    <h3>and always accessible</h3>
+                </div>
+            </div>
+
+            <div class="flex items-center flex-col gap-[35px]">
+                <img class="w-[27%]" src="/Image/Homepage-Secure.svg" alt="">
+                <div class="font-bold text-[25px]">
+                    <h3>Protected by the most</h3>
+                    <h3>secure cryptographic tech</h3>
+                </div>
+            </div>
+
+            <div class="flex items-center flex-col gap-[35px]">
+                <img  class="w-[90px]" src="/Image/Homepage-EU Regulated.svg" alt="">
+                <div class="font-bold text-[25px]">
+                    <h3>Licensed in EU</h3>
+                    <h3>and regulatory compliant</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="my-[120px]">
+        <h1 class="text-[40px] text-center mx-auto w-[50%] font-bold">Built by investors, for investors</h1>
+
+        <div class="flex items-center justify-between mx-auto my-[50px] w-[50%]">
+            <div class="flex items-center flex-col gap-[15px]">
+                <h1 clas>1</h1>
+                <h3 class=" text-[15px]">Total user cryptoassets value</h3>
+            </div>
+            <div class="flex items-center flex-col gap-[15px]">
+                <h1>2</h1>
+                <h3 class=" text-[15px]">Total number of verified users</h3>
+            </div>
+            <div class="flex items-center flex-col gap-[15px]">
+                <h1>3</h1>
+                <h3 class=" text-[15px]">BORG Token holders</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="my-[120px]">
+        <h1 class="text-[40px] text-center mx-auto w-[50%] font-bold">Invest and grow your crypto portfolio</h1>
+        <div class="flex items-center w-[20%] mx-auto">
+            <button class="px-10 py-2 rounded-md bg-[#E5F9F3] focus:outline-none mt-[30px] text-[#01C38D] font-bold">Thematics</button>
+            <button class="px-10 py-2 rounded-md bg-[#fff] focus:outline-none mt-[30px]">SwissBorg Earn</button>
+
+            <div>
+                <img src="/Image/3-layer.png" alt="">
+                <div>
+                    <h1>Diversify like a pro with Thematics.</h1>
+                    <p>Our themed bundles of crypto are the most direct way to invest in what inspires you. Discover how the Web3 & Golden Thematics can transform your convictions into meaningful investments.</p>
+                    <button class="px-10 py-2 rounded-md bg-[#fff] focus:outline-none mt-[30px] border-[]">Learn More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
