--- a/index.html
+++ b/index.html
@@ -396,21 +396,22 @@
             </div>
         </div>
 
-        <div class="text-center px-[5rem] items-center py-[5rem]">
+        <div class="text-center px-[5rem] items-center py-[3rem]">
             <h1 class="font-bold text-[43px] leading-tight">Download the SwissBorg app and kickstart your crypto wealth today</h1>
             <p class="py-[10px] pt-[2rem] text-[16px]">App is not available in NG</p>
             <button class="bg-[#01C38D] text-white px-[55px] py-[5px] test-[20px] font-bold rounded-lg">Notify Me</button>
         </div>
 
-        <div class="flex gap-[10px] justify-between px-[5rem] py-[4rem] bg-[#75B9FF] m-[3%] rounded-md">
+        <div class=" skyblue flex gap-[10px] justify-between items-center px-[30px] py-[] bg-[#75B9FF] m-[3%] rounded-lg">
+            <img src="/images/premium-img.avif" alt="" width="13%">
             <h1 class="text-[25px] text-center text-white font-bold">Boost your earnings and lower your fees with SwissBorg premium</h1>
             <button class="bg-white text-[#01C38D] font-bold px-[18px] py-[5px] rounded-full">Get Started</button>
         </div>
 
-        <div class="items-center py-[5rem] px-[3rem]">
+        <div class="items-center py-[3rem] px-[3rem]">
             <h1 class="text-center py-[40px] text-[40px] font-bold">Explore more features in the SwissBorg app</h1>
-            <div class="flex gap-[25px] items-center text-center flex-row justify-between">
-                <div class="px-[65px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 13px #e6e4e4;">
+            <div class="flex gap-[15px] items-center text-center flex-row justify-between">
+                <div class=" flex flex-col px-[65px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 13px #e6e4e4;">
                     <a href=""><img src="/images/swissapp-img.svg" alt="" width="55%"></a>
                     <p class="py-[10px] text-[20px]">BORG Token</p>
                 </div>
@@ -440,16 +441,16 @@
         </div>
         
         <div class="flex gap-[250px] px-[2rem] py-[2rem] ">
-            <div class="flex gap-[120px] justify-between">
+            <div class="flex gap-[200px] justify-between">
                 <div class="flex flex-col leading-8">
-                    <h1 class="font-bold text-[18px] text-gray-400">SwissBorg app</h1>
+                    <h1 class="font-bold text-[18px] text-gray-400 pb-[8px]">SwissBorg app</h1>
                     <a href="" class="text-gray-400">Buy cryptos</a>
                     <a href="" class="text-gray-400">Earn cryptos</a>
                     <a href="" class="text-gray-400">Diversify smartly</a>
                     <a href="" class="text-gray-400">All cryptos</a>
                 </div>
                 <div class="flex flex-col items-start leading-8">
-                    <h1 class="font-bold text-[18px] text-gray-400 opacity-0">SwissBorg app</h1>
+                    <h1 class="font-bold text-[18px] text-gray-400 pb-[6px] opacity-0">SwissBorg app</h1>
                     <a href="" class="text-gray-400">Portfolio Visualizer</a>
                     <a href="" class="text-gray-400">Asset Analysis</a>
                     <a href="" class="text-gray-400">Supported countries</a>
@@ -458,14 +459,14 @@
             </div>
 
             <div class="flex flex-col leading-8">
-                <h1 class="font-bold text-[18px] text-gray-400">Learn</h1>
+                <h1 class="font-bold text-[18px] text-gray-400 pb-[6px]">Learn</h1>
                 <a href="" class="text-gray-400">Blog</a>
                 <a href="" class="text-gray-400">Academy</a>
             </div>
             <div class="flex flex-col leading-8">
-                <h1 class="font-bold text-[18px] text-gray-400">Team</h1>
+                <h1 class="font-bold text-[18px] text-gray-400 pb-[6px] ">Team</h1>
                 <a href="" class="text-gray-400">About SwissBorg</a>
-                <a href="" class="flex gap-[10px] text-gray-400">career <p class="bg-[#8A7CFF] text-[12px] text-white px-[8px] rounded-md">We're hiring</p></a>
+                <a href="" class="flex gap-[10px] text-gray-400">career<button class="bg-[#8A7CFF] text-[12px] px-[5px] text-white rounded-md">We're hiring</button></a>
                 <a href="" class="text-gray-400">Affiliate Program</a>
                 <a href="" class="text-gray-400">Help Center</a>
             </div>
@@ -476,22 +477,23 @@
             <p class="text-gray-400">Proudly engineered in Switzerland</p>
         </div>
 
-        <div class="flex px-[2rem] gap-[25px]">
-            <div class="green text-white py-[3rem] px-[6rem] text-center rounded-md">
+        <div class="flex px-[1rem] gap-[20px]">
+            <div class="green text-white py-[2rem] px-[3rem] text-center rounded-md">
                 <h1 class="font-bold text-[30px]">Subscribe to our newsletter</h1>
                 <p class="text-[18px] py-[12px]">Receive official updates when you join our mailing list</p>
                 <div class="flex gap-[15px]">
-                    <input type="text" class="py-[8px] px-[15px] w-[100%] rounded-md bg-[#53DEBD]" placeholder="Name(required)" class="text-white">
-                    <input type="text" class="py-[8px] px-[15px] w-[100%] rounded-md bg-[#53DEBD]" placeholder="Email(required)" class="text-white">
+                    <input type="text" class="py-[8px] px-[25px] w-[] rounded-md bg-[#53DEBD] border-none" placeholder="Name(required)" class="text-white">
+                    <input type="text" class="py-[8px] px-[20px] w-[] rounded-md bg-[#53DEBD]" placeholder="Email(required)" class="text-white">
+                    <i class="bi bi-chevron-right bg-white text-[#53DEBD] px-[15px] py-[10px] text-[20px] -ml-10"></i>
                 </div>
             </div>
-            <div class="blue py-[3rem] px-[2rem] text-center rounded-md">
+            <div class="blue py-[2rem] px-[3rem] text-center rounded-md">
                 <div>
                     <h1 class="font-bold text-[24px] text-white">Be part of our growing global community</h1>
                     <p class="text-[18px] py-[15px] text-white">Follow and subscribe to our channels</p>
                 </div>
-                <div class="flex gap-[20px] text-center items-center">
-                    <i class="bi bi-twitter-x bg-white px-[8px] py-[5px] rounded-md"></i>
+                <div class="flex gap-[24px] text-center items-center">
+                    <i class="bi bi-twitter-x bg-white text-[#8475FC] px-[8px] py-[5px] rounded-md"></i>
                     <i class="bi bi-discord bg-white px-[8px] py-[5px] rounded-md"></i>
                     <i class="bi bi-youtube bg-white px-[8px] py-[5px] rounded-md"></i>
                     <i class="bi bi-facebook bg-white px-[8px] py-[5px] rounded-md"></i>
@@ -505,10 +507,7 @@
         </div>
     </section>
 
-
-
-
-    <footer class="py-[3rem] bg-slate-600">
+    <footer class="mt-[50px] bg-slate-200">
         <div class="flex"> 
             <div>
                 <h1>Engineered in Switzerland</h1>
