--- a/css/portfolio.html
+++ b/css/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SwissBorg.io</title>
+    <title>SwissBorg.oi</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="/css/output.css" rel="stylesheet">
 </head>
@@ -11,39 +11,39 @@
     <section>
         <div class="flex gap-[50px] items-center px-[3rem] py-[6rem]">
             <div>
-                <h1 class="font-bold text-[70px] font-sans leading-tight">Go from Fiat to Crypto in an instant!</h1>
-                <p class="text-[20px] py-[40px]">Connect to Binance, HitBTC, LMAX, Kraken, Bitfinex, Orca and Phoenix exchanges and get the best liquidity and rates in seconds.</p>
+                <h1 class="font-bold text-[70px] font-sans leading-tight">Useful Account Analysis at the tap of a finger</h1>
+                <p class="text-[20px] py-[40px]">Portfolio Visualizer, a free tool, provides in-depth investment analysis and statistics in an easy-to-understand format.</p>
             </div>
-            <img src="/images/hero-image.avif" alt="" width="55%">
+            <img src="/images/portfolio-img.avif" alt="" width="45%">
         </div>
 
         <div class="flex flex-col px-[10rem] py-[3rem] items-center">
-            <p class="font-bold text-[50px] py-[2rem] text-center leading-tight">Our revolutionary Smart Engine takes the guesswork out of investing</p>
+            <p class="font-bold text-[50px] py-[2rem] text-center leading-tight">In-depth investment statistics in an easy-to-understand format</p>
             <div class=" flex gap-[25px] items-center text-[18px]">
-                <a href="" class="px-[12px] py-[8px] bg-[#E5F9F3] text-[#01C38D] hover:font-bold rounded-lg">Best execution</a>
-                <a href="">Unique trading pairs</a>
-                <a href="">Transparent</a>
-                <a href="">No hidden fees</a>
+                <a href="" class="px-[12px] py-[8px] bg-[#E5F9F3] text-[#01C38D] font-bold rounded-lg">Balance</a>
+                <a href="">Profit/Loss</a>
+                <a href="">Fees</a>
+                <a href="">Allocation</a>
             </div>
 
             <div class="flex gap-[45px] items-center px-[4rem] py-[4rem]">
-                <img src="/images/buy-sell-1.avif" alt="" width="50%">
+                <img src="/images/balance.avif" alt="" width="55%">
                 <div>
-                    <h1 class="font-bold text-[30px] py-[30px]">Buy, sell & exchange always at the best available price</h1>
-                    <p class="text-[16px]">Market volatility often leads to price differences across exchanges. Our Smart Engine takes advantage of this by finding the best execution route every time, meaning you get the best price from multiple exchanges.</p>
+                    <h1 class="font-bold text-[30px] py-[30px]">View your historical balance</h1>
+                    <p class="text-[16px]">Get a quick overview of your total deposits, withdrawals, fees and profit/loss. With Portfolio Visualizer, visualise how your portfolio has grown over time.</p>
                 </div>
             </div>
         </div>
 
-        <div class="text-center px-[5rem] items-center py-[5rem]">
-            <h1 class="font-bold text-[43px] leading-tight">Download the SwissBorg app and kickstart your crypto wealth today</h1>
+        <div class="text-center px-[7rem] items-center py-[4rem]">
+            <h1 class="font-bold text-[43px] leading-tight">Access Portfolio Visualizer for free in the SwissBorg app</h1>
             <p class="py-[10px] pt-[2rem] text-[16px]">App is not available in NG</p>
             <button class="bg-[#01C38D] text-white px-[55px] py-[5px] test-[20px] font-bold rounded-lg">Notify Me</button>
         </div>
 
-        <div class="flex gap-[10px] justify-between px-[5rem] py-[4rem] m-[3%] rounded-md" style="background-image: linear-gradient(135deg, #389AFF, #68B3FF);">
-            <h1 class="text-[25px] text-center text-white font-bold">Boost your earnings and lower your fees with SwissBorg premium</h1>
-            <button class="bg-white text-[#01C38D] font-bold px-[18px] py-[5px] rounded-full">Get Started</button>
+        <div class="flex gap-[10px] justify-between px-[2rem] py-[3rem] m-[3%] rounded-xl" style="background-image: linear-gradient(135deg, #1A1F2A, #30394B);">
+            <h1 class="text-[15px] text-center text-white font-bold">Get a compound yield that is optimised and is paid out daily on your favourite cryptos like BTC, ETH, USDC and more.</h1>
+            <button class="text-white font-bold px-[18px] py-[5px] rounded-full" style="background-image: linear-gradient(135deg, #C17F3C, #DFA66D);">Estimated earnings</button>
         </div>
 
         <div class="items-center py-[5rem] px-[3rem]">
@@ -115,12 +115,12 @@
             <p class="text-gray-400">Proudly engineered in Switzerland</p>
         </div>
 
-        <div class="flex px-[2rem] gap-[30px]">
+        <div class="flex px-[2rem] gap-[25px]">
             <div class="text-white py-[3rem] px-[6rem] text-center rounded-md" style="background-image: linear-gradient(135deg, #09a77d, #12E3BC);">
                 <h1 class="font-bold text-[30px]">Subscribe to our newsletter</h1>
                 <p class="text-[18px] py-[12px]">Receive official updates when you join our mailing list</p>
-                <div class="flex gap-[15px]">
-                    <input type="text" class="px-[16px] w-[130%] rounded-md bg-[#53DEBD] text-white" placeholder="Name(required)">
+                <div class="flex gap-[12px]">
+                    <input type="text" class="px-[16px] w-[100%] rounded-md bg-[#53DEBD] text-white" placeholder="Name(required)">
                     <input type="text" class="px-[16px] w-[100%] rounded-md bg-[#53DEBD]" placeholder="Email(required)">
                     <i class="bi bi-chevron-right font-bold bg-white text-[#12E3BC] py-[10px] px-[15px] text-[25px] ml-[-16px]"></i>
                 </div>
@@ -130,7 +130,7 @@
                     <h1 class="font-bold text-[24px] text-white">Be part of our growing global community</h1>
                     <p class="text-[18px] py-[15px] text-white">Follow and subscribe to our channels</p>
                 </div>
-                <div class="flex gap-[20px] text-center items-center">
+                <div class="flex gap-[25px] text-center items-center">
                     <i class="bi bi-twitter-x bg-white px-[8px] py-[5px] rounded-md"></i>
                     <i class="bi bi-discord bg-white px-[8px] py-[5px] rounded-md"></i>
                     <i class="bi bi-youtube bg-white px-[8px] py-[5px] rounded-md"></i>
