--- a/investwithalpha.html
+++ b/investwithalpha.html
@@ -35,37 +35,46 @@
         </div>
 
         <div>
-            <h1>Trending projects</h1>
+            <h1 class="text-center text-white text-[40px] py-[5rem]">Trending projects</h1>
             <div>
-                <div class="flex gap-[30px] mb-[20px] justify-center">
-                    <div class="bg-[#191E29]">
-                        <h1>Upcoming</h1>
-                        <img src="/images/galactica.webp" alt="" width="20%">
-                        <div>
-                            <p>Blockchain L1</p>
-                            <p>DeFi</p>
-                            <p>DeSoc</p>
-                            <h2>Galactica</h2>
+                <div class="flex justify-center gap-[20px] mb-[20px] px-[4rem]">
+                    <div class=" w-[25%]">
+                        <h1 class="text-white px-[10px] bg-[#db6a41] w-[10%] text-center text-[14px]" style="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
+                        <img src="/images/galactica.webp" alt="" style="height: 30vh; width: 100%; ">
+                        <div class="bg-[#191E29] flex flex-col py-[10px]">
+                            <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
+                                <p class="bg-[#282a2c] text-[14px] px-[5px]">Blockchain L1</p>
+                                <p class="bg-[#282a2c] text-[14px]">DeFi</p>
+                                <p class="bg-[#282a2c] text-[14px]">DeSoc</p>
+                            </div>
+                            <h2 class="text-white text-[20px] px-[15px] font-bold">Galactica</h2>
+                            <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">I'm interested</button>
                         </div>
                     </div>
-                    <div class="bg-[#191E29]">
-                        <h1>Closed</h1>
-                        <img src="/images/darkmachine.webp" alt="" width="40%">
-                        <div>
-                            <p>Blockchain L1</p>
-                            <p>DeFi</p>
-                            <p>DeSoc</p>
-                            <h2>Galactica</h2>
+
+                    <div class=" w-[25%]">
+                        <h1 class="text-white bg-[#7182FF] w-[18%] text-center text-[14px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
+                        <img src="/images/darkmachine.webp" alt="" style="height: 30vh; width: 100%;">
+                        <div class="bg-[#191E29] flex flex-col py-[10px]">
+                            <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
+                                <p class="bg-[#282a2c] text-[14px] px-[5px]">GameFi</p>
+                            </div>
+                            <h2 class="text-white text-[20px] px-[15px] font-bold">Dark Machine</h2>
+                            <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">See project</button>
                         </div>
                     </div>
-                    <div class="bg-[#191E29]">
-                        <h1>Closing</h1>
-                        <img src="/images/aethir.webp" alt="" width="40%">
-                        <div>
-                            <p>Blockchain L1</p>
-                            <p>DeFi</p>
-                            <p>DeSoc</p>
-                            <h2>Galactica</h2>
+
+                    <div class=" w-[25%]">
+                        <h1 class="text-white bg-[#7182FF] w-[18%] text-center text-[14px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
+                        <img src="/images/aethir.webp" alt="" style="height: 30vh; width: 100%;">
+                        <div class="bg-[#191E29] flex flex-col py-[10px]">
+                            <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
+                                <p class="bg-[#282a2c] text-[14px] px-[5px]">DePin</p>
+                                <p class="bg-[#282a2c] text-[14px] px-[5px]">GPU Cloud</p>
+                                <p class="bg-[#282a2c] text-[14px] px-[5px]">AI</p>
+                            </div>
+                            <h2 class="text-white text-[20px] px-[15px] font-bold">Aethir</h2>
+                            <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">See project</button>
                         </div>
                     </div>
                 </div>
