finished up a page

--- a/diversify.html
+++ b/diversify.html
@@ -185,8 +185,8 @@
         </div>
     </div>
 
-    <div class="flex justify-center w-full mx-auto gap-[150px]">
-        <h1 class="text-[40px] w-[20%] my-[100px] font-bold">Frequently asked questions</h1>
+    <div class="flex justify-center w-[80%] mx-auto gap-[100px]">
+        <h1 class="text-[40px] w-[20%] text-right font-bold">Frequently asked questions</h1>
 
 
         <div class="flex flex-col items-center w-[35%] justify-between">
@@ -283,6 +283,40 @@
             <img src="/Image/Thematic screen-EN.avif" alt="">
         </div>
     </div>
+
+    <footer class="py-[2rem] bg-[#d9dbdd] mt-[4rem]">
+        <div class="mx-auto w-[70%]">
+            <div class="flex justify-between py-[2rem] px-[2rem] text-[13px] gap-[25px]"> 
+                <div class="w-[90%]">
+                    <h1 class="font-bold leading-6 text-[#7c818b] pb-[25px]">Engineered in Switzerland</h1>
+                    <p class="text-[#7c818b]">SBorg SA</p> 
+                    <p class="text-[#7c818b]">Rue du Grand-Chêne 8, 1003 Lausanne Switzerland</p>
+                </div>
+                <div class="w-[85%]">
+                    <h1 class="font-bold leading-6 text-[#7c818b] pb-[12px]">Operating the SwissBorg App under the license FVT000326 in Estonia and under the registration E2022-034 in France</h1>
+                    <p class="text-[#7c818b]">SwissBorg Solutions OÜ</p> 
+                    <p class="text-[#7c818b]">Pärnu mnt. 12, 10148 Tallinn, Estonia</p>
+                </div>
+                <div class="w-[90%]">
+                    <h1 class="font-bold leading-6 text-[#7c818b] pb-[12px]">SwissBorg Solutions OÜ is a partner of Modulr Finance B.V., a company registered in the Netherlands with company number 81852401, which is authorised and regulated by the Dutch Central Bank (DNB) as an Electronic Money Institution (Firm Reference Number: R182870) for the issuance of electronic money and payment services.</h1>
+                    <p class="text-[#7c818b]">Your account and related payment services are provided by Modulr Finance B.V. Your funds will be held in one or more segregated accounts and safeguarded in line with the Financial Supervision Act (Wet op het Financieel Toezicht, Wft) – for more information please see <a href="">here</a>.</p> 
+                </div>
+                <div class="w-[86%]">
+                    <p class="text-[#7c818b]">By using this website you agree to our Terms of Use. Nothing on this website should be construed as a recommendation for any action. SwissBorg Solutions OÜ is the owner of the license: FVT000326 (<a href="" class="text-[#09a77d]">link</a>) and E2022-034 (link). For more details, please see the <a href="" class="text-[#09a77d]">Terms of Use</a> of the SwissBorg app.</p>
+                </div>
+            </div>
+    
+            <div class="flex items-center justify-between pt-[4rem] px-[2rem] text-[12px]">
+                <div class="py-[2rem] flex gap-[20px] text-[#19C897] font-bold">
+                    <a href="">Terms of Use</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Cookies Policy</a>
+                    <a href="">Brand kit</a>
+                </div>
+                <p class="px-[6rem] text-[#7c818b]">&copy SBorg SA. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="/JS/swissborg.js"></script>
 
