new page completed

--- a/diversify.html
+++ b/diversify.html
@@ -147,7 +147,7 @@
     <div class="bg-[#F6F7F8] h-[300px] py-[50px]">
         <div class="flex justify-center gap-[100px] w-[70%] mx-auto my-[80px] ">
             <div class=" flex flex-col text-center">
-                <h1 class="text-4xl text-[#01C38D] text-center w-[70%] mx-auto">17,366</h1>
+                <h1 class="text-4xl text-[#01C38D] text-center w-[70%] mx-auto" id="count">17,366</h1>
                 <p class="w-[80%] mx-auto">Total Thematics Investors</p>
             </div>
             <div class=" flex flex-col text-center">
@@ -184,7 +184,7 @@
             </button>
         </div>
     </div>
-
+        <!-- Frequently asked quedtions -->
     <div class="flex justify-center w-[80%] mx-auto gap-[100px]">
         <h1 class="text-[40px] w-[20%] text-right font-bold">Frequently asked questions</h1>
 
@@ -283,7 +283,84 @@
             <img src="/Image/Thematic screen-EN.avif" alt="">
         </div>
     </div>
+        <!-- section before the footer  -->
+    <section class="flex flex-col justify-between w-[70%] mx-auto">
+        <div class="flex justify-between px-[3rem] py-[3rem] items-center">
+            <div class="flex flex-col-reverse-1 gap-[8px]">
+                <img src="/images/cookies-img.svg" alt="">
+                <a href="" class="text-[17px] text-gray-400 font-bold">Manage cookies settings</a>
+            </div>
+            <input type="" placeholder="dropdown" class="px-[20px] py-[5px] rounded-sm w-[25%]" style="border: 1px solid gray">
+        </div>
+        
+        <div class="flex gap-[250px] px-[2rem] py-[2rem] ">
+            <div class="flex gap-[120px] justify-between">
+                <div class="flex flex-col leading-8">
+                    <h1 class="font-bold text-[18px] text-gray-400">SwissBorg app</h1>
+                    <a href="" class="text-gray-400">Buy cryptos</a>
+                    <a href="" class="text-gray-400">Earn cryptos</a>
+                    <a href="" class="text-gray-400">Diversify smartly</a>
+                    <a href="" class="text-gray-400">All cryptos</a>
+                </div>
+                <div class="flex flex-col items-start leading-8">
+                    <h1 class="font-bold text-[18px] text-gray-400 opacity-0">SwissBorg app</h1>
+                    <a href="" class="text-gray-400">Portfolio Visualizer</a>
+                    <a href="" class="text-gray-400">Asset Analysis</a>
+                    <a href="" class="text-gray-400">Supported countries</a>
+                    <a href="" class="text-gray-400">Fees</a>
+                </div>
+            </div>
 
+            <div class="flex flex-col leading-8">
+                <h1 class="font-bold text-[18px] text-gray-400">Learn</h1>
+                <a href="" class="text-gray-400">Blog</a>
+                <a href="" class="text-gray-400">Academy</a>
+            </div>
+            <div class="flex flex-col leading-8">
+                <h1 class="font-bold text-[18px] text-gray-400">Team</h1>
+                <a href="" class="text-gray-400">About SwissBorg</a>
+                <a href="" class="flex gap-[10px] text-gray-400">career <p class="bg-[#8A7CFF] text-[12px] text-white px-[8px] rounded-md">We're hiring</p></a>
+                <a href="" class="text-gray-400">Affiliate Program</a>
+                <a href="" class="text-gray-400">Help Center</a>
+            </div>
+        </div>
+
+        <div class="flex items-center flex-col-reverse-1 gap-[8px] px-[2rem] py-[2rem]">
+            <img class="w-10 rounded-full" src="/Image/swit.png" alt="SwitzerlandImg">
+            <p class="text-gray-400">Proudly engineered in Switzerland</p>
+        </div>
+
+        <div class="flex px-[2rem] gap-[30px]">
+            <div class="text-white py-[3rem] px-[6rem] text-center rounded-md" style="background-image: linear-gradient(135deg, #09a77d, #12E3BC);">
+                <h1 class="font-bold text-[30px]">Subscribe to our newsletter</h1>
+                <p class="text-[18px] py-[12px]">Receive official updates when you join our mailing list</p>
+                <div class="flex gap-[20px]">
+                    <input type="text" class="px-[16px] w-[130%] rounded-md bg-[#53DEBD] text-white" placeholder="Name(required)">
+                    <input type="text" class="px-[16px] w-[100%] rounded-md bg-[#53DEBD]" placeholder="Email(required)">
+                    <i class="bi bi-chevron-right font-bold bg-white text-[#12E3BC] py-[10px] px-[15px] text-[25px] ml-[-16px] rounded-tr-lg rounded-br-lg"></i>
+                </div>
+            </div>
+            <div class="py-[3rem] px-[2rem] text-center rounded-md" style="background-image: linear-gradient(135deg, #2e15ce, #8B7DFF);">
+                <div>
+                    <h1 class="font-bold text-[24px] text-white">Be part of our growing global community</h1>
+                    <p class="text-[18px] py-[15px] text-white">Follow and subscribe to our channels</p>
+                </div>
+                <div class="flex gap-[20px] text-center items-center">
+                    <i class="bi bi-twitter-x bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-discord bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-youtube bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-facebook bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-instagram bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-linkedin bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-telegram bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- here is footer  -->
     <footer class="py-[2rem] bg-[#d9dbdd] mt-[4rem]">
         <div class="mx-auto w-[70%]">
             <div class="flex justify-between py-[2rem] px-[2rem] text-[13px] gap-[25px]"> 
