--- a/diversify.html
+++ b/diversify.html
@@ -17,8 +17,8 @@
             </div>
         
             <div class="hidden md:flex items-center gap-8">
-                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold" href="">Invest</a>
-                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold" href="">About Us</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">Invest</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">About Us</a>
             </div>
         
             <div>
