--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <div class="bg-[#191E29] h-[120vh] md:h-[160vh] text-white" >
-        <nav class="flex items-center justify-between py-4 px-6 md:px-10 lg:px-20">
+        <nav class="flex items-center justify-between py-4 px-6 mx-[300px] md:px-10 lg:px-20">
             <div>
                 <img src="" alt="">
                 <a href=""><h1 class="text-2xl md:text-3xl lg:text-4xl font-bold cursor-pointer">SwissBorg</h1></a>
             </div>
         
             <div class="hidden md:flex items-center gap-8">
-                <a class="text-sm md:text-base lg:text-lg cursor-pointer" href="">Invest</a>
-                <a class="text-sm md:text-base lg:text-lg cursor-pointer" href="">About Us</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">Invest</a>
+                <a class="text-sm md:text-base lg:text-md cursor-pointer font-semibold hover:text-[#01C38D] hover:border-b-2 hover:border-[#01C38D]" href="">About Us</a>
             </div>
         
             <div>
-                <h1 class="text-lg md:text-xl lg:text-2xl cursor-pointer"><span class="text-lg md:text-xl lg:text-2xl"><i class="bi bi-globe"></i></span> EN</h1>
+                <h1 class="text-lg md:text-lg lg:text-xl cursor-pointer"><span class="text-lg md:text-lg lg:text-xl"><i class="bi bi-globe"></i></span> EN</h1>
             </div>
         </nav>
 
