--- a/investwithalpha.html
+++ b/investwithalpha.html
@@ -39,7 +39,7 @@
             <div>
                 <div class="flex justify-center gap-[20px] mb-[20px] px-[4rem]">
                     <div class=" w-[25%]">
-                        <h1 class="text-white px-[10px] bg-[#db6a41] w-[10%] text-center text-[14px]" style="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
+                        =<h1 class="text-white px-[10px] bg-[#db6a41] w-[10%] text-center text-[14px]" stle="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
                         <img src="/images/galactica.webp" alt="" style="height: 30vh; width: 100%; ">
                         <div class="bg-[#191E29] flex flex-col py-[10px]">
                             <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
