--- a/investwithalpha.html
+++ b/investwithalpha.html
@@ -39,7 +39,7 @@
             <div>
                 <div class="flex justify-center gap-[20px] mb-[20px] px-[4rem]">
                     <div class=" w-[25%]">
-                        =<h1 class="text-white px-[10px] bg-[#db6a41] w-[10%] text-center text-[14px]" stle="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
+                        <h1 class="text-white px-[10px] bg-[#db6a41] w-[10%] text-center text-[14px]" style="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
                         <img src="/images/galactica.webp" alt="" style="height: 30vh; width: 100%; ">
                         <div class="bg-[#191E29] flex flex-col py-[10px]">
                             <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
@@ -78,14 +78,55 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col justify-center items-center bg-[#191E29]">
-                    <h1>Closing</h1>
-                    <img src="/images/agoradex.webp" alt="" width="20%">
-                    <div>
-                        <p>GameFi</p>
-                        <p>DeFi</p>
-                        <p>AI</p>
-                    </div> 
+                <div class="py-[2rem] w-[25%] mx-auto">
+                    <h1 class="text-white bg-[#7182FF] w-[5%] text-center text-[15px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
+                    <img src="/images/agoradex.webp" alt="" style="height: 28vh; width: 100%;">
+                    <div class="bg-[#191E29] flex flex-col py-[10px]">
+                        <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
+                            <p class="bg-[#282a2c] text-[14px] px-[5px]">GameFi</p>
+                            <p class="bg-[#282a2c] text-[14px] px-[5px]">DeFi</p>
+                            <p class="bg-[#282a2c] text-[14px] px-[5px]">AI</p>
+                        </div>
+                        <h2 class="text-white text-[20px] px-[15px] font-bold">Aethir</h2>
+                        <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">See project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="text-white py-[10rem]">
+            <h1 class="text-[40px] py-[25px] text-center">All projects</h1>
+            <div class="flex gap-[40px] justify-center">
+                <a href="">Register your interest</a>
+                <a href="" class="text-[#282a2c]">Upcoming</a>
+                <a href="" class="text-[#282a2c]">In progress</a>
+                <a href="" class="text-[#282a2c]">Register your interest</a>
+            </div>
+
+            <div>
+                <div>
+                    <h3>Project name</h3>
+                    <h1>GenesisLRT</h1>
+                    <h1>Kelp</h1>
+                </div>
+                <div>
+                    <h3>Interested users</h3>
+                    <p>58</p>
+                    <p>93</p>
+                </div>
+                <div>
+                    <h3>Past backers</h3>
+                    <h1>Tagus Labs, Ankr, Everstake</h1>
+                    <h1>Stader Foundation, Cluster </h1>
+                </div>
+                <div>
+                    <h3>Previous round raised</h3>
+                    <h1>$500,000.00</h1>
+                    <h1>$1,400,000</h1>
+                </div>
+                <div>
+                    <a href="">i'm interested</a>  
+                    <a href="">i'm interested</a>  
                 </div>
             </div>
         </div>
