--- a/buycryptos.html
+++ b/buycryptos.html
@@ -41,7 +41,8 @@
             <button class="bg-[#01C38D] text-white px-[55px] py-[5px] test-[20px] font-bold rounded-lg">Notify Me</button>
         </div>
 
-        <div class="flex gap-[10px] justify-between px-[5rem] py-[4rem] m-[3%] rounded-md" style="background-image: linear-gradient(135deg, #389AFF, #68B3FF);">
+        <div class="flex gap-[8px] justify-between px-[2rem] py-[1rem] m-[3%] rounded-md items-center" style="background-image: linear-gradient(135deg, #389AFF, #68B3FF);">
+            <img src="/images/premium-img.avif" alt="" width="15%">
             <h1 class="text-[25px] text-center text-white font-bold">Boost your earnings and lower your fees with SwissBorg premium</h1>
             <button class="bg-white text-[#01C38D] font-bold px-[18px] py-[5px] rounded-full">Get Started</button>
         </div>
@@ -50,19 +51,27 @@
             <h1 class="text-center py-[40px] text-[40px] font-bold">Explore more features in the SwissBorg app</h1>
             <div class="flex gap-[25px] items-center text-center flex-row justify-between">
                 <div class="px-[65px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 13px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-img.svg" alt="" width="55%"></a>
+                    <a href="">
+                        <img src="/images/swissapp-img.svg" alt="" width="55%" class="mx-auto"/>
+                    </a>
                     <p class="py-[10px] text-[20px]">BORG Token</p>
                 </div>
                 <div class="px-[65px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 13px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-2.svg" alt="" width="55%"></a>
+                    <a href="">
+                        <img src="/images/swissapp-2.svg" alt="" width="55%" class="mx-auto"/>
+                    </a>
                     <p class="py-[10px] text-[20px]">SwissBorg Earn</p>
                 </div>
                 <div class="px-[50px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 12px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-3.avif" alt="" width="55%"></a>
+                    <a href="">
+                        <img src="/images/swissapp-3.avif" alt="" width="55%" class="mx-auto"/>
+                    </a>
                     <p class="py-[10px] text-[20px]">Supported Assets</p>
                 </div>
                 <div class="px-[50px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 12px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-4.avif" alt="" width="50%"></a>
+                    <a href="">
+                        <img src="/images/swissapp-4.avif" alt="" width="50%" class="mx-auto"/>
+                    </a>
                     <p class="py-[10px] text-[20px]">Rewards Program</p>
                 </div>
             </div>
